--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,6 @@
     <include src="./partials/footer.html"></include>
 
     <script src="./index.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
